...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrevCourseActivity">

    <Button
        android:id="@+id/add_prev_course_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        android:onClick="onAddPrevCourseClicked"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/done"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/class_size_spinner"
        android:layout_width="374dp"
        android:layout_height="48dp"
        android:layout_marginBottom="144dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginBottom="324dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/subject_view"
        android:layout_width="374dp"
        android:layout_height="48dp"
        android:layout_marginBottom="264dp"
        android:ems="10"
        android:hint="@string/subject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/quarter_spinner"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginBottom="324dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/course_number_view"
        android:layout_width="374dp"
        android:layout_height="48dp"
        android:layout_marginBottom="204dp"
        android:ems="10"
        android:hint="@string/course_number"
        app:layout_constraintBottom_toBottomOf="parent"
...
