<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/person_list_item_height"
    android:layout_marginLeft="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    android:layout_marginTop="16sp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/session_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:height="32sp"
        android:lineHeight="32sp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@tools:sample/full_names"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rename_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="325dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:fabSize="mini" />

</FrameLayout>